fix spacing around article titles

--- a/web/src/css/rd.css
+++ b/web/src/css/rd.css
@@ -5,8 +5,15 @@
     background: white;
     height:33px;
   }
+  .article-titlebox {
+    min-height: 6vh;
+  }
 }
-
+@media (min-width:768px) {
+  .article-titlebox {
+    min-height: 12vh;
+  }
+}
 .r-d-nav-text-desktop{
   font-family: 'Everett', monospace;
   font-style: normal;
@@ -95,7 +102,7 @@
   font-family: Everett;
 }
 .rte.rte-large .article-accordion button{
-   padding-left:0;
+   padding:0;
    display:inline-block;
    width:100%;
 }
@@ -114,7 +121,7 @@
   padding-right: 10rem;
   margin-right: -10rem;
   padding-top: 1.3rem;
-  padding-bottom: 0;
+  padding-bottom: 0.4rem;
 }
 .rte.rte-large .article-accordion .article-pagebreak{
   border-top-color: black;
